syntax = "proto3";

option go_package = ".;pb";

message MountAzureBlobRequest {
	string mountArgs = 1;
	repeated string authEnv = 2;
	string protocol = 3;
}

message MountAzureBlobResponse {
	string output = 1;
}

service MountService {
	rpc MountAzureBlob(MountAzureBlobRequest) returns (MountAzureBlobResponse) {};
}
